Fix overflow issues.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
     height: 100vh;
     margin: 0;
     color: #333;
-    overflow: hidden;
     padding: 10%;
 }
 
